syntax = "proto3";

package vis3d;


message Point {
    int32 x         = 1;
    int32 y         = 2;
}

message Points{ 
    repeated Point points = 1;
}


message Track {
    int32 start_time             = 1;
    int32 end_time               = 2;
    bytes box_patches            = 3;
    bytes face_patches           = 4;
    map<int32, Point> points     = 5; // timestamp: points
    repeated int32 stage_indices = 6;
}

message Trajectory {
    map<string, Track> pid_tracks = 1; // track_id: tracks
}


message Color {
    repeated int64 color = 1;
}

message Period {
    int64 start = 1;
    int64 end   = 2;
}

message Periods {
    repeated Period periods = 1;
}

message MetaInfo {
    map<string, Periods> global_periods = 1; // floor: periods
}

message GetTrajectoryRequest {
    string mall_tag       = 1;
    string date           = 2;
    string exp_version    = 3;
    string pid            = 4;
    string floor          = 5;
    string store_id       = 6;
    string storeinfos     = 7;  // optional
    string camerainfos    = 8;  // optional
    string trajectory_dir = 9;  // optional
    string log_path       = 10; // optional
}

message GetMetaInfoRequest {
    string mall_tag       = 1;
    string date           = 2;
    string exp_version    = 3;
    string pid            = 4;
    string trajectory_dir = 5; // optional
    string log_path       = 6; // optional
}

message GetTrajectoryResponse {
    Trajectory trajectory        = 1;
    map<string,Color> color_dict = 2;
    repeated string store_data   = 3;
    repeated string vtp_stages   = 4;
    repeated string logs         = 5;
    string floor_image_url       = 6;
    double floor_height          = 7;
    double floor_width           = 8;
    double pixel2meter           = 9;
}

message GetMetaInfoResponse {
    MetaInfo metainfo          = 1;
}

service Vis3D {
    rpc GetTrajectory (GetTrajectoryRequest) returns (GetTrajectoryResponse) {}
    rpc GetMetaInfo (GetMetaInfoRequest) returns (GetMetaInfoResponse) {}
}